# tarkov-stream-producer

./: .time_tracking.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  lcov.info  todo.md  twitch_bot_integration.md
.github/workflows/: ci.yml  release.yml
docs/: phase_1b_plan.md  phase_2a_complete_schema.md  phase_2a_plan.md  phase_2a_plan_gemini.md  phase_2b_api_plan.md  phase_2b_rest_api_plan.md  phase_2b_tdd_plan.md  phase_4_expanded_batch_processing_plan.md  phase_4_video_detection_plan.md  state_flow.md  temporary_twitch_bot_options.md
migrations/: 20251226000000_initial_schema.sql
src/: db.rs  main.rs  models.rs  stats.rs
src/api/: dto.rs  error.rs  mod.rs  routes.rs  state.rs
src/api/handlers/: health.rs  mod.rs  raid.rs  session.rs
tarkov_stream_producer/: Cargo.toml
tarkov_stream_producer/src/: main.rs
temp_bot/: .env.example  README_LINUX.md  README_WINDOWS.txt  bot.py  get_bot_id.py  requirements.txt  rules.txt  run_bot.bat  run_bot.sh  shopping.txt  tarkov_pve.txt  test_bot.py
