[package]
name = "tarkov_stream_producer"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "time", "macros"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3.44", features = ["macros", "formatting", "parsing", "serde"] }

[dev-dependencies]
syn = "=2.0.111"
cargo-tarpaulin = "0.34.1"
